<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/myImage"
        android:layout_width="370dp"
        android:layout_height="370dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/back" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="130dp"
        android:gravity="center"
        android:text="@string/result" />

    <Button
        android:id="@+id/backToMenuButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/return_text"
        android:textSize="20sp"
        android:layout_marginBottom="32dp"
        android:layout_gravity="center" />
</LinearLayout>
